Pretty close to working I think ish

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,8 +4,9 @@ AUTOMAKE_OPTIONS = subdir-objects
 
 bin_PROGRAMS = mkbcfnt
 
-mkbcfnt_SOURCES = source/main.cpp
+mkbcfnt_SOURCES =   source/main.cpp \
+                    source/bcfnt.cpp
 
-mkbcfnt_LDADD = $(FreeType_LIBS)
-AM_CPPFLAGS   = -I$(srcdir)/include -D_GNU_SOURCE $(FreeType_CFLAGS)
+mkbcfnt_LDADD = $(FreeType_LIBS) $(ImageMagick_LIBS)
+AM_CPPFLAGS   = -I$(srcdir)/include -D_GNU_SOURCE $(FreeType_CFLAGS) $(ImageMagick_CFLAGS)
 EXTRA_DIST = autogen.sh
