--- a/configure.ac
+++ b/configure.ac
@@ -16,6 +16,7 @@ AX_CHECK_COMPILE_FLAG([-Wall],      [CPPFLAGS+=" -Wall"])
 AX_CHECK_COMPILE_FLAG([-pthread],   [CPPFLAGS+=" -pthread" LDFLAGS+=" -pthread"])
 AX_CHECK_COMPILE_FLAG([-flto],      [CPPFLAGS+=" -flto" LDFLAGS+=" -flto"])
 AX_CHECK_COMPILE_FLAG([-pipe],      [CPPFLAGS+=" -pipe"])
+AX_CHECK_COMPILE_FLAG([-fno-exceptions], [CPPFLAGS+=" -fno-exceptions" LDFLAGS+=" -fno-exceptions"])
 AX_CXX_COMPILE_STDCXX_11(noext, mandatory)
 AC_LANG_POP()
 
@@ -33,6 +34,7 @@ PKG_CONFIG=$_save_PKG_CONFIG[]dnl
 
 # Checks for libraries.
 PKG_CHECK_MODULES_STATIC(FreeType, [freetype2])
+PKG_CHECK_MODULES_STATIC(ImageMagick, [Magick++ >= 6.0.0])
 
 # Checks for header files.
 AC_CHECK_HEADERS([unistd.h])
